kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: analytics-proto
  name: analytics-proto
  namespace: analytics
spec:
  ports:
   - port: 5000
     protocol: TCP
  selector:
    app: analytics-proto
